# nbody-llm

./: .gitignore  Cargo.toml  README.md  build.rs  combined_nbody_llm_opt.csv  combined_nbody_man_opt.csv  combined_rebound.csv  index.html  nbody-32c48c6eb22975d3.js  nbody-92ddfcfb8e63927e.js  perf_benchmark.py  viz_nbody.ipynb
.cargo/: config.toml
baseline/: CMakeLists.txt  main.c
reference/: CMakeLists.txt  main.c
src/: barnes_hut.rs  barnes_hut_3d.rs  lib.rs  main.rs  shared.rs  vis.rs
src/llm/: barnes_hut.rs  barnes_hut_midterm.rs  mod.rs
src/manual/: barnes_hut.rs  barnes_hut_pool.rs  barnes_hut_seq.rs  brute_force.rs  bruteforce.rs  mod.rs
src/render/: camera.rs  mod.rs  pipeline.rs  renderer.rs  scene.rs
src/shaders/: aabb.slang  points.slang  shader.slang
