[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0"
env_logger = "0.11"
log = "0.4"
pollster = "0.4.0"
rand = "0.9"
winit = "0.30"
wgpu = "24.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Gpu", "Navigator", "Window"] }
