[package]
name = "nbody"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nlib"

[dependencies]
cfg-if = "1.0"
log = "0.4"
pollster = "0.4.0"
rand = "0.9"
web-time = "1.1.0"
wgpu = "24.0.1"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
fern = "0.7.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Gpu", "Navigator", "Window"] }
