[package]
name = "nbody"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nlib"

[dependencies]
bytemuck = { version = "1.22", features = ["derive", "min_const_generics"] }
cfg-if = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", features = ["winit"], optional = true }
glam = { version = "0.30.0", optional = true }
log = "0.4"
nalgebra = { version = "0.33.2", features = ["bytemuck"] }
num-traits = "0.2"
pollster = { version = "0.4.0", optional = true }
rand = "0.9"
rayon = "1.10"
web-time = "1.1.0"
wgpu = { version = "24.0.1", optional = true }
winit = { version = "0.30", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.31.0"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
egui-winit = { version = "0.31.0", default-features = false }
fern = "0.7.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Gpu",
  "Navigator",
  "Window",
], optional = true }

[features]
default = ["render"]
render = ["egui", "egui-wgpu", "glam", "pollster", "web-sys", "winit", "wgpu"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
